Improve JavaDoc and add private constructor to Constants class.